# VoxelEngine

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
.github/workflows/: main.yml
assets/data/: blocks.data  physics_constants.data
include/: BlockRegistry.hpp  Camera.hpp  Chunk.hpp  Grid.hpp  Hotbar.hpp  Physics.hpp  PhysicsConstants.hpp
src/: AtlasTexture.cpp  Camera.cpp  Chunk.cpp  Grid.cpp  Hotbar.cpp  Physics.cpp  Shader.cpp
